Display ratio on posts

--- a/app/views/posts/partials/show/_information.html.erb
+++ b/app/views/posts/partials/show/_information.html.erb
@@ -44,6 +44,10 @@
     Type: <%= post.file_ext.upcase %>
   </li>
   <li>
+    <% gcd = post.image_width.gcd(post.image_height) %>
+    Ratio: <%= post.image_width / gcd %>:<%= post.image_height / gcd %>
+  </li>
+  <li>
     Status:
     <% if @post.is_pending? %>
       Pending
