--- a/app/views/api_keys/index.html.erb
+++ b/app/views/api_keys/index.html.erb
@@ -31,7 +31,7 @@
 <% if params[:user_id].present? && @api_keys.blank? %>
   <%= link_to "Create API key", new_user_api_key_path(CurrentUser.user.id) %>
 <% else %>
-  <%= table_for @api_keys, width: "100%", class: "striped autofit" do |t| %>
+  <%= table_for(@api_keys, width: "100%", class: "striped autofit") do |t| %>
     <% t.column(:name) %>
     <% t.column(:key, td: { class: "col-expand" }) %>
 
