--- a/app/views/forum_categories/index.html.erb
+++ b/app/views/forum_categories/index.html.erb
@@ -12,9 +12,17 @@
       <li>Create: <b class="with-style user-<%= cname.downcase %>"><%= cname %></b></li>
     </ul>
   <% end %>
-  <% t.column(if: policy(ForumCategory).all?(:update?, :destroy?)) do |cat| %>
-    <%= link_to("Edit", edit_forum_category_path(cat)) %> |
-    <%= link_to("Delete", forum_category_path(cat), method: :delete, data: { confirm: "Are you sure you want to delete this forum category? It must be empty of posts." }) %>
+  <% t.column do |cat| %>
+    <% p = policy(cat) %>
+    <% if p.update? %>
+      <%= link_to("Edit", edit_forum_category_path(cat)) %> |
+    <% end %>
+    <% if p.destroy? %>
+      <%= link_to("Delete", forum_category_path(cat), method: :delete, data: { confirm: "Are you sure you want to delete this forum category? It must be empty of posts." }) %> |
+    <% end %>
+    <% if p.move_all_topics? && cat.can_move_topics? %>
+      <%= link_to("Move Topics", move_all_topics_forum_category_path(cat)) %>
+    <% end %>
   <% end %>
 <% end %>
 
