Add edit links to static wiki pages

--- a/app/views/static/avoid_posting.html.erb
+++ b/app/views/static/avoid_posting.html.erb
@@ -1,14 +1,10 @@
-<div id="c-static">
-  <div id="a-avoid-posting">
-
-    <div class="dtext-container">
-      <%= format_text(@page.body, allow_color: true) %>
-      <%= format_avoid_posting_list %>
-    </div>
+  <div class="dtext-container">
+    <%= format_text(@page.body, allow_color: true) %>
+    <%= format_avoid_posting_list %>
   </div>
-</div>
 
 <%= render "avoid_postings/secondary_links" %>
+<%= render(partial: "static/wiki_edit_link", locals: { wiki: @page }) %>
 
 <% content_for(:page_title) do %>
   Avoid Posting List
