--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -2,6 +2,7 @@
   <%= format_text(@page.body, allow_color: true) %>
 </div>
 
+<%= render(partial: "static/wiki_edit_link", locals: { wiki: @page }) %>
 <% content_for(:page_title) do %>
   Contact
 <% end %>
