--- a/app/views/users/_restricted_notice.html.erb
+++ b/app/views/users/_restricted_notice.html.erb
@@ -1,3 +1,6 @@
 <div class="ui-corner-all ui-state-highlight site-notice" id="restricted-notice">
-  <h1>Your account is still pending. It must be approved by an administrator before you can use most features of the site.</h1>
+  <% @page = safe_wiki(FemboyFans.config.restricted_notice_wiki_page) %>
+  <div class="dtext-container">
+    <%= format_text(@page.body, allow_color: true) %>
+  </div>
 </div>
