Add wiki edit link for rules body

--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -14,6 +14,7 @@
 
 <%= render "secondary_links" %>
 
+<%= render(partial: "static/wiki_edit_link", locals: { wiki: @wiki }) %>
 <% content_for(:page_title) do %>
   Rules
 <% end %>
