--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#00549e">
+<meta name="theme-color" content="#222222">
 <meta name="RATING" content="RTA-5042-1996-1400-1577-RTA" />
 <link rel="top" title="<%= FemboyFans.config.app_name %>" href="/">
 <%= csrf_meta_tag %>
