--- a/app/views/tags/_alias_and_implication_list.html.erb
+++ b/app/views/tags/_alias_and_implication_list.html.erb
@@ -7,19 +7,19 @@
 <% end %>
 <% if tag&.consequent_aliases&.present? %>
   <p class="hint">
-    The following tags are aliased to this tag: <%= multiple_link_to_wiki_or_new(tag.consequent_aliases.map(&:antecedent_name)) %>
+    The following tags are aliased to this tag: <%= multiple_link_to_wiki_or_new(tag.consequent_aliases.order(:antecedent_name).map(&:antecedent_name)) %>
     (<%= link_to "learn more", help_page_path(id: "tag_aliases") %>).
   </p>
 <% end %>
 <% if tag&.antecedent_implications&.present? %>
   <p class="hint">
-    This tag implicates <%= multiple_link_to_wiki_or_new(tag.antecedent_implications.map(&:consequent_name)) %>
+    This tag implicates <%= multiple_link_to_wiki_or_new(tag.antecedent_implications.order(:consequent_name).map(&:consequent_name)) %>
     (<%= link_to "learn more", help_page_path(id: "tag_implications") %>).
   </p>
 <% end %>
 <% if tag&.consequent_implications&.present? %>
   <p class="hint">
-    The following tags implicate this tag: <%= multiple_link_to_wiki_or_new(tag.consequent_implications.map(&:antecedent_name)) %>
+    The following tags implicate this tag: <%= multiple_link_to_wiki_or_new(tag.consequent_implications.order(:antecedent_name).map(&:antecedent_name)) %>
     (<%= link_to "learn more", help_page_path(id: "tag_implications") %>).
   </p>
 <% end %>
