--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -37,6 +37,7 @@
       ["WebP posts", "webp_posts", "existing_posts"],
       ["GIF posts", "gif_posts", "existing_posts"],
       ["WebM posts", "webm_posts", "existing_posts"],
+      ["MP4 posts", "mp4_posts", "existing_posts"],
       ["Average file size", number_to_human_size(@stats["average_file_size"], precision: 3)],
       ["Total file size", number_to_human_size(@stats["total_file_size"], precision: 3)],
     ]
