Add embed to pools

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -257,7 +257,7 @@
 <% end %>
 
 <% content_for(:page_title) do %>
-  #<%= @post.id %>
+  Post #<%= @post.id %>
 <% end %>
 
 <% content_for(:html_header) do %>
