Add embed to more pages

--- a/app/views/wiki_pages/show.html.erb
+++ b/app/views/wiki_pages/show.html.erb
@@ -26,6 +26,8 @@
     <%= wiki_page_post_previews(wiki_content) %>
 </section>
 
+<% render(partial: "static/embed", locals: { record: wiki_content, name: wiki_content.pretty_title, description: wiki_content.body, post: nil }) %>
+
 <% content_for(:page_title) do %>
   Wiki - <%= wiki_content.pretty_title %>
 <% end %>
