--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -88,7 +88,7 @@
   var mascots = <%= Mascot.active_for_browser.to_json.html_safe %>;
 <% end -%>
 
-<div id="searchbox" class='mascotbox'>
+<div id="searchbox" class="mascotbox">
   <div id="static-index">
     <h1 style="font-size: 4em;"><%= link_to(FemboyFans.config.app_name, "/") %></h1>
     <div id="links">
@@ -107,39 +107,55 @@
     <div>
       <%= form_tag(posts_path, method: "get") do %>
         <div>
-          <%= text_field_tag "tags", "", "size": 30, "autofocus": "autofocus", 'data-autocomplete': "tag-query" %><br>
+          <%= text_field_tag "tags", "", "size": 30, "autofocus": "autofocus", "data-autocomplete": "tag-query" %><br>
           <input type="submit" value="Search">
           <input type="button" value="Change Mascot" id="change-mascot">
         </div>
       <% end %>
     </div>
   </div>
-  <div id='mascot_artist'></div>
+  <div id="mascot_artist"></div>
 </div>
 
-<div id='searchbox2' class='mascotbox'>
+<div id="searchbox2" class="mascotbox">
   <% Post.fast_count.to_s.each_char do |x| %>
     <%= image_tag("counter/#{x}.png") %>
   <% end %>
 </div>
 
-<% if news_update = NewsUpdate.recent %>
+<% if (news_update = NewsUpdate.recent) %>
   <div id="news-excerpt-box" class="mascotbox">
     <div class="news-excerpt dtext-container"><%= format_text(news_update.message.lines.first, inline: true) %></div>
-    <div class="previous-news-link"><%= link_to "Click here for previous news", news_updates_path %></div>
+    <div class="previous-news-link"><%= link_to("Click here for previous news", news_updates_path) %></div>
   </div>
 <% end %>
 
-<div id='searchbox3' class='mascotbox'>
+<div id="searchbox3" class="mascotbox">
   <p>
-    Serving <%= number_with_delimiter Post.fast_count %> posts<br/>
-    <%= link_to "Takedown Policy and Process", takedown_static_path, title: "Takedown Information" %>
-    | <%= link_to "Contact Us", contact_path, title: "Contact Us" %>
-    | <%= link_to "Terms of Service", terms_of_service_path, title: "Terms of Service" %>
-    | <%= link_to "Privacy", privacy_policy_path, title: "Privacy Policy" %>
+    Serving <%= number_with_delimiter(Post.fast_count) %> posts<br/>
+    <%= link_to("Takedown Policy and Process", takedown_static_path, title: "Takedown Information") %>
+    | <%= link_to("Contact Us", contact_path, title: "Contact Us") %>
+    | <%= link_to("Terms of Service", terms_of_service_path, title: "Terms of Service") %>
+    | <%= link_to("Privacy", privacy_policy_path, title: "Privacy Policy") %>
   </p>
 </div>
 
-<% content_for(:html_header) do -%>
+<% content_for(:html_header) do %>
   <meta name="enable-autocomplete" content="<%= CurrentUser.user.enable_autocomplete %>">
-<%- end %>
+  <%= tag.meta(name: "description", content: FemboyFans.config.description) %>
+  <%= tag.meta(property: "og:site", content: FemboyFans.config.app_name) %>
+  <%= tag.meta(property: "og:title", content: FemboyFans.config.app_name) %>
+  <%= tag.meta(property: "og:url", content: root_url(host: FemboyFans.config.hostname, protocol: "https")) %>
+  <%= tag.meta(name: "canonical", content: root_url(host: FemboyFans.config.hostname, protocol: "https")) %>
+
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="<%= FemboyFans.config.hostname %>/Blep.png">
+  <meta property="og:image:height" content="710">
+  <meta property="og:image:width" content="710">
+
+  <%# Twitter properties %>
+  <meta name="twitter:card" content="summary">
+  <%= tag.meta(name: "twitter:title", content: FemboyFans.config.app_name) %>
+  <%= tag.meta(name: "twitter:description", content: FemboyFans.config.description) %>
+  <meta property="twitter:image" content="<%= FemboyFans.config.hostname %>/Blep.png">
+<% end %>
