--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -43,7 +43,7 @@
       <% @artist.domains.each do |url, count| %>
         <li>
           <%= favicon_for_link("https://#{url}") %>
-          <%= link_to(url, posts_path(tags: "#{artist.name} source:*#{url}*")) %>:
+          <%= link_to(url, posts_path(tags: "#{@artist.name} source:*#{url}*")) %>:
           <%= count %>
         </li>
       <% end %>
