--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,84 +1,5 @@
-<h1>
-  Artist: <%= link_to @artist.pretty_name, posts_path(tags: @artist.name), class: "tag-type-#{@artist.category_id}" %>
-  <% if @artist.is_locked? %>
-    (locked)
-  <% end %>
-</h1>
-
-<% if @artist.is_dnp? %>
-  <div id="avoid-posting">
-    <h2>This artist is on the <%= link_to "Avoid Posting", avoid_posting_static_path %> list.</h2>
-    <% if @artist.avoid_posting.pretty_details.present? %>
-      <div class="dtext-container">
-        <%= format_text(@artist.avoid_posting.pretty_details, inline: true) %>
-      </div>
-    <% end %>
-    <p><%= link_to "Open Avoid Posting entry", avoid_posting_path(@artist.avoid_posting) %></p>
+<%= render layout: "show" do %>
+  <div>
+    <%= render "summary", artist: @artist %>
   </div>
-<% end %>
-
-<% if @artist.notes.present? && @artist.visible? %>
-  <div class="dtext-container">
-    <%= format_text(@artist.notes, allow_color: true) %>
-  </div>
-
-  <p><%= link_to "View wiki page", @artist.wiki_page %></p>
-<% else %>
-  <p><%= link_to_wiki_or_new "View wiki page", @artist.name %></p>
-<% end %>
-
-<%= render "tags/alias_and_implication_list", tag: @artist.tag %>
-
-<ul>
-  <% if @artist.linked_user_id && @artist.linked_user %>
-    <li><strong>User</strong> <%= link_to_user(@artist.linked_user) %></li>
-  <% end %>
-
-  <% if @artist.other_names.present? %>
-    <li><strong>Other Names</strong> <%= link_to_artists(@artist.other_names) %></li>
-  <% end %>
-  <% if @artist.domains.any? %>
-    <li><strong>Domains</strong></li>
-    <ul>
-      <% @artist.domains.each do |url, count| %>
-        <li>
-          <%= favicon_for_link("https://#{url}") %>
-          <%= link_to(url, posts_path(tags: "#{@artist.name} source:*#{url}*")) %>:
-          <%= count %>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-  <% if @artist.urls.present? %>
-    <li><strong>URLs</strong></li>
-    <ul>
-      <% @artist.sorted_urls.each do |url| %>
-        <li>
-          <% if url.is_active? %>
-            <%= decorated_link_to(h(url.to_s), h(url)) %>
-          <% else %>
-            <del><%= favicon_for_link(url.url) %> <%= h(url.url) %></del>
-          <% end %>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-</ul>
-
-<div class="recent-posts">
-  <h1>Recent Posts (<%= link_to "view all", posts_path(tags: @artist.name) %>)</h1>
-
-  <%= render "posts/partials/common/inline_blacklist" %>
-
-  <div style="margin: 1em 0;">
-    <%= @post_set.presenter.post_previews_html(self) %>
-  </div>
-</div>
-
-<% render(partial: "static/embed", locals: { record: @artist, name: @artist.pretty_name, description: @artist.notes || "", post: nil }) %>
-
-<%= render "secondary_links" %>
-
-<% content_for(:page_title) do %>
-  Artist - <%= @artist.name %>
 <% end %>
