--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -6,7 +6,7 @@
 article.post-preview {
   box-sizing: border-box;
   height: auto;
-  width: fit-content;
+  width: 194px;
   margin: 0 10px 10px 0;
   overflow: hidden;
   text-align: center;
