--- a/app/views/posts/partials/show/_options.html.erb
+++ b/app/views/posts/partials/show/_options.html.erb
@@ -1,58 +1,58 @@
 <ul>
-  <% if CurrentUser.user.is_member? %>
+  <% if CurrentUser.user.can_favorite? %>
     <li class="vpad-05"><%= tag.a("+Favorite", "href": "#", "class": "button btn-success", "id": "add-to-favorites", "data-shortcut": "f", "style": ("display: none;" if @post.is_favorited?), "data-pid": @post.id) %></li>
     <li class="vpad-05"><%= tag.a("-Favorite", "href": "#", "class": "button btn-danger", "id": "remove-from-favorites", "data-shortcut": "shift+f", "style": ("display: none;" unless @post.is_favorited?), "data-pid": @post.id) %></li>
-    <% if policy(post).update? %>
-      <li><%= link_to("Edit", "#edit", id: "side-edit-link") %></li>
     <% end %>
-    <li><%= link_to_if(post.visible?, "Download", post.file_url) %></li>
-    <li><%= link_to("Set as avatar", "javascript:void", id: "set-as-avatar-link", data: { post_id: post.id }) %> (<%= link_to("list", users_path(search: { avatar_id: post.id })) %>)</li>
-    <% if post.has_notes? && policy(post).copy_notes? %>
-      <li id="copy-all-notes-list"><%= link_to("Copy notes", "#", id: "copy-notes") %></li>
+  <% if policy(post).update? %>
+    <li><%= link_to("Edit", "#edit", id: "side-edit-link") %></li>
+  <% end %>
+  <li><%= link_to_if(post.visible?, "Download", post.file_url) %></li>
+  <li><%= link_to("Set as avatar", "javascript:void", id: "set-as-avatar-link", data: { post_id: post.id }) %> (<%= link_to("list", users_path(search: { avatar_id: post.id })) %>)</li>
+  <% if post.has_notes? && policy(post).copy_notes? %>
+    <li id="copy-all-notes-list"><%= link_to("Copy notes", "#", id: "copy-notes") %></li>
+  <% end %>
+
+  <% if PostReplacementPolicy.new(CurrentUser.user, post).create? %>
+    <li><%= link_to("Replace image", new_post_replacement_path(post_id: post.id), id: "replace-image") %></li>
+  <% end %>
+  <% if post.is_status_locked? %>
+    <li><span id="status-locked-notice">Status locked</span></li>
+  <% else %>
+    <% if post.is_active? && policy(PostFlag).create? %>
+      <li><%= link_to("Flag", new_post_flag_path(post_flag: { post_id: post.id }), id: "flag") %></li>
+    <% elsif post.is_appealable? && policy(PostAppeal).create? %>
+      <li><%= link_to("Appeal Deletion", new_post_appeal_path(post_appeal: { post_id: post.id }), id: "appeal") %></li>
+    <% end %>
+    <%= li_link_to_if(TicketPolicy.new(CurrentUser.user, post).create?, "Report", model_new_ticket_path(model: post)) %>
+
+    <% if post.is_deleted? && policy(post).undelete? %>
+      <li><%= tag.a("Undelete", "href": "#", "class": "undelete-post-link", "data-pid": post.id) %></li>
+      <% if (post.fav_count > 0 || post.votes.exists?) && post.parent_id && policy(post).move_favorites? %>
+        <li><%= link_to("Move favorites", move_favorites_post_path(post)) %></li>
+      <% end %>
+    <% elsif policy(post).delete? %>
+      <li><%= link_to("Delete", delete_post_path(post)) %></li>
     <% end %>
 
-    <% if PostReplacementPolicy.new(CurrentUser.user, post).create? %>
-      <li><%= link_to("Replace image", new_post_replacement_path(post_id: post.id), id: "replace-image") %></li>
+    <% if post.is_approvable? && policy(post).approve? %>
+      <li><%= tag.a("Approve", "href": "#", "class": "approve-post-link", "data-pid": post.id) %></li>
     <% end %>
-    <% if post.is_status_locked? %>
-      <li><span id="status-locked-notice">Status locked</span></li>
-    <% else %>
-      <% if post.is_active? && policy(PostFlag).create? %>
-        <li><%= link_to("Flag", new_post_flag_path(post_flag: { post_id: post.id }), id: "flag") %></li>
-      <% elsif post.is_appealable? && policy(PostAppeal).create? %>
-        <li><%= link_to("Appeal Deletion", new_post_appeal_path(post_appeal: { post_id: post.id }), id: "appeal") %></li>
-      <% end %>
-      <%= li_link_to_if(TicketPolicy.new(CurrentUser.user, post).create?, "Report", model_new_ticket_path(model: post)) %>
 
-      <% if post.is_deleted? && policy(post).undelete? %>
-        <li><%= tag.a("Undelete", "href": "#", "class": "undelete-post-link", "data-pid": post.id) %></li>
-        <% if (post.fav_count > 0 || post.votes.exists?) && post.parent_id && policy(post).move_favorites? %>
-          <li><%= link_to("Move favorites", move_favorites_post_path(post)) %></li>
-        <% end %>
-      <% elsif policy(post).delete? %>
-        <li><%= link_to("Delete", delete_post_path(post)) %></li>
-      <% end %>
-
-      <% if post.is_approvable? && policy(post).approve? %>
-        <li><%= tag.a("Approve", "href": "#", "class": "approve-post-link", "data-pid": post.id) %></li>
-      <% end %>
-
-      <% if post.is_unapprovable?(CurrentUser.user) && policy(post).unapprove? %>
-        <li><%= tag.a("Unapprove", "href": "#", "data-pid": post.id, "id": "unapprove-post-link") %></li>
-      <% end %>
-
-      <% if IqdbProxy.enabled? && policy(post).update_iqdb? %>
-        <li><%= link_to("Update IQDB", update_iqdb_post_path(@post), method: :put) %></li>
-      <% end %>
-      <% if policy(post).expunge? %>
-        <li><%= tag.a("Destroy", "href": "#", "id": "destroy-post-link", "data-pid": post.id) %></li>
-      <% end %>
+    <% if post.is_unapprovable?(CurrentUser.user) && policy(post).unapprove? %>
+      <li><%= tag.a("Unapprove", "href": "#", "data-pid": post.id, "id": "unapprove-post-link") %></li>
     <% end %>
-    <% if policy(post).regenerate_thumbnails? %>
-      <li><%= tag.a("Regenerate Thumbnails", "href": "#", "id": "regenerate-image-samples-link", "data-pid": post.id) %></li>
+
+    <% if IqdbProxy.enabled? && policy(post).update_iqdb? %>
+      <li><%= link_to("Update IQDB", update_iqdb_post_path(@post), method: :put) %></li>
     <% end %>
-    <% if post.is_video? && policy(post).regenerate_videos? %>
-      <li><%= tag.a("Regenerate Video Samples", "href": "#", "id": "regenerate-video-samples-link", "data-pid": post.id) %></li>
+    <% if policy(post).expunge? %>
+      <li><%= tag.a("Destroy", "href": "#", "id": "destroy-post-link", "data-pid": post.id) %></li>
     <% end %>
   <% end %>
+  <% if policy(post).regenerate_thumbnails? %>
+    <li><%= tag.a("Regenerate Thumbnails", "href": "#", "id": "regenerate-image-samples-link", "data-pid": post.id) %></li>
+  <% end %>
+  <% if post.is_video? && policy(post).regenerate_videos? %>
+    <li><%= tag.a("Regenerate Video Samples", "href": "#", "id": "regenerate-video-samples-link", "data-pid": post.id) %></li>
+<% end %>
 </ul>
